# XSS-SQLI

./: .gitignore  main.py  pyproject.toml
templates/: index.html  index_sqli.html  xss.html
