[tool.poetry]
name = "xss-sqli-demo"
version = "0.1.0"
description = "a simple demo of xss and sqli"
authors = ["Rujal Acharya <076bei029.rujal@pcampus.edu.np>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
